--- a/aulaCssAnimation/public_html/transform.html
+++ b/aulaCssAnimation/public_html/transform.html
@@ -65,6 +65,5 @@
 		<div class="estrutura" id="exemplo6"></div>
 		<div class="estrutura" id="exemplo7">Exemplo de rotate</div>
 	</body>
-        /*la la la*/
-</html>
+<html>
 
