--- a/aulaCssAnimation/public_html/transition.html
+++ b/aulaCssAnimation/public_html/transition.html
@@ -12,7 +12,7 @@
 				transition: width 2s, 
                                     height 2s,
                                     transform 2s,
-                                    background-color: 2s;
+                                    background-color 2s;
 				text-align:center;
 				color:white;
 				font-size:20px;
